--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ a:hover {
   overflow: hidden;
   transition: all 0.3 ease-in-out;
   z-index: 1;
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .menu-links a {
